--- a/Human right and laws/CH15 人权保障的条件和体系.html
+++ b/Human right and laws/CH15 人权保障的条件和体系.html
@@ -342,7 +342,7 @@ html {
 <h2 class="mume-header" id="%E7%A4%BE%E4%BC%9A%E7%BB%84%E7%BB%87-%E4%B8%AA%E4%BA%BA">&#x793E;&#x4F1A;&#x7EC4;&#x7EC7;&#x3001;&#x4E2A;&#x4EBA;</h2>
 
 <ol>
-<li>&#x4E0D;&#x4FB5;&#x72AF;&#x4ED6;&#x4EBA;&#x6743;&#x5229;&#x7684;&#x4E49;&#x52A1;&#xFF1B;</li>
+<li>&#x4E0D;&#x4FB5;&#x72AF;&#x4ED6;&#x4EBA;&#x6743;&#x5229;&#x7684;&#x4E49;&#x52A1;;</li>
 <li>&#x5728;&#x4E00;&#x5B9A;&#x6761;&#x4EF6;&#x4E0B;&#x534F;&#x52A9;&#x4ED6;&#x4EBA;&#x5B9E;&#x73B0;&#x6743;&#x5229;&#x7684;&#x4E49;&#x52A1;.</li>
 </ol>
 <h2 class="mume-header" id="%E5%9B%BD%E9%99%85%E7%BB%84%E7%BB%87">&#x56FD;&#x9645;&#x7EC4;&#x7EC7;</h2>
@@ -399,17 +399,38 @@ html {
 <h2 class="mume-header" id="%E4%BA%BA%E6%9D%83%E7%9A%84%E7%BB%84%E7%BB%87%E4%BF%9D%E9%9A%9C">&#x4EBA;&#x6743;&#x7684;&#x7EC4;&#x7EC7;&#x4FDD;&#x969C;</h2>
 
 <p>&#x4EBA;&#x6743;&#x7684;&#x7EC4;&#x7EC7;&#x4FDD;&#x969C;&#x662F;&#x6307;, &#x4EBA;&#x4EEC;&#x56E2;&#x7ED3;&#x8D77;&#x6765;, &#x7ED3;&#x6210;&#x4E00;&#x5B9A;&#x7684;&#x7EC4;&#x7EC7;, &#x53EF;&#x4EE5;&#x66F4;&#x597D;&#x5730;&#x4FDD;&#x969C;&#x4EBA;&#x6743;.</p>
+<blockquote>
+<p>&#x9700;&#x8981;&#x4EBA;&#x6C11;&#x7ED3;&#x793E;&#x7684;&#x81EA;&#x7531;&#x7684;&#x4FDD;&#x969C;&#x7684;&#x524D;&#x63D0;.</p>
+<p>&#x4E2A;&#x4EBA;&#x65E2;&#x662F;&#x4E2A;&#x4EBA;&#x4E5F;&#x662F;&#x516C;&#x6C11;</p>
+<ul>
+<li>&#x4F5C;&#x4E3A;&#x4E2A;&#x4EBA;, &#x4E2A;&#x4EBA;&#x5173;&#x6CE8;&#x81EA;&#x6211;&#x7684;&#x6743;&#x529B;&#x7684;&#x4FDD;&#x969C;&#x4E0E;&#x5B9E;&#x73B0;.</li>
+<li>&#x4F5C;&#x4E3A;&#x516C;&#x6C11;, &#x4E2A;&#x4EBA;&#x5173;&#x6CE8;&#x516C;&#x5171;&#x5229;&#x76CA;&#x7684;&#x4FDD;&#x969C;&#x4E0E;&#x5B9E;&#x73B0;.</li>
+</ul>
+</blockquote>
 <ol>
 <li>&#x5C31;&#x4EBA;&#x6743;&#x4FDD;&#x969C;&#x7684;&#x6761;&#x4EF6;&#x800C;&#x8A00;, &#x7EC4;&#x7EC7;&#x4FDD;&#x969C;&#x662F;&#x4EBA;&#x6743;&#x4FDD;&#x969C;&#x7684;&#x6761;&#x4EF6;&#x4E4B;&#x4E00;. &#x4EBA;&#x6743;&#x4FDD;&#x969C;&#x9700;&#x8981;&#x96C6;&#x4F53;&#x7684;&#x529B;&#x91CF;.</li>
-<li>&#x5C31;&#x4EBA;&#x6743;&#x4FDD;&#x969C;&#x7684;&#x65B9;&#x5F0F;&#x800C;&#x8A00;, &#x7EC4;&#x7EC7;&#x4FDD;&#x969C;&#x662F;&#x4EBA;&#x6743;&#x4FDD;&#x969C;&#x7684;&#x65B9;&#x5F0F;&#x4E4B;&#x4E00;. &#x5728;&#x4E89;&#x53D6;&#x67D0;&#x9879;&#x6743;&#x5229;&#x7684;&#x65F6;&#x5019;, &#x5728;&#x4E0E;&#x67D0;&#x79CD;&#x4FB5;&#x5BB3;&#x884C;&#x4E3A;&#x8FDB;&#x884C;&#x6297;&#x4E89;&#x7684;&#x65F6;&#x5019;, &#x4EBA;&#x4EEC;&#x56E2;&#x7ED3;&#x8D77;&#x6765;, &#x6709;&#x76F8;&#x540C;&#x8BC9;&#x6C42;&#x6216;&#x76F8;&#x540C;&#x5883;&#x9047;&#x7684;&#x4EBA;&#x7ED3;&#x6210;&#x4E00;&#x5B9A;&#x7684;&#x7EC4;&#x7EC7;, &#x91C7;&#x53D6;&#x96C6;&#x4F53;&#x884C;&#x52A8;, &#x66F4;&#x6709;&#x5229;&#x4E8E;&#x4FDD;&#x969C;&#x4EBA;&#x6743;.</li>
+<li>&#x5C31;&#x4EBA;&#x6743;&#x4FDD;&#x969C;&#x7684;&#x65B9;&#x5F0F;&#x800C;&#x8A00;, &#x7EC4;&#x7EC7;&#x4FDD;&#x969C;&#x662F;&#x4EBA;&#x6743;&#x4FDD;&#x969C;&#x7684;&#x65B9;&#x5F0F;&#x4E4B;&#x4E00;. &#x5728;&#x4E89;&#x53D6;&#x67D0;&#x9879;&#x6743;&#x5229;&#x7684;&#x65F6;&#x5019;, &#x5728;&#x4E0E;&#x67D0;&#x79CD;&#x4FB5;&#x5BB3;&#x884C;&#x4E3A;&#x8FDB;&#x884C;&#x6297;&#x4E89;&#x7684;&#x65F6;&#x5019;, &#x4EBA;&#x4EEC;&#x56E2;&#x7ED3;&#x8D77;&#x6765;, &#x6709;&#x76F8;&#x540C;&#x8BC9;&#x6C42;&#x6216;&#x76F8;&#x540C;&#x5883;&#x9047;&#x7684;&#x4EBA;&#x7ED3;&#x6210;&#x4E00;&#x5B9A;&#x7684;&#x7EC4;&#x7EC7;, &#x91C7;&#x53D6;&#x96C6;&#x4F53;&#x884C;&#x52A8;, &#x66F4;&#x6709;&#x5229;&#x4E8E;&#x4FDD;&#x969C;&#x4EBA;&#x6743;.
+<blockquote>
+<p>&#x5982;&#x679C;&#x7531;&#x4E8E;&#x653F;&#x7B56;&#x7684;&#x9650;&#x5236;&#x4F7F;&#x5F97;&#x4EBA;&#x6C11;&#x65E0;&#x6CD5;&#x81EA;&#x7531;&#x5730;&#x7ED3;&#x6210;&#x4E00;&#x4E2A;&#x7EC4;&#x7EC7;, &#x90A3;&#x4E48;&#x662F;&#x4E0D;&#x5229;&#x4E8E;&#x6743;&#x5229;&#x7684;&#x4FDD;&#x969C;&#x7684;.</p>
+</blockquote>
+</li>
 </ol>
 <h2 class="mume-header" id="%E4%BA%BA%E6%9D%83%E7%9A%84%E7%89%A9%E8%B4%A8%E4%BF%9D%E9%9A%9C">&#x4EBA;&#x6743;&#x7684;&#x7269;&#x8D28;&#x4FDD;&#x969C;</h2>
 
 <ol>
 <li>&#x5C31;&#x4EBA;&#x6743;&#x4FDD;&#x969C;&#x7684;&#x6761;&#x4EF6;&#x800C;&#x8A00;, &#x7ECF;&#x6D4E;&#x53D1;&#x5C55;&#x662F;&#x4EBA;&#x6743;&#x4FDD;&#x969C;&#x7684;&#x91CD;&#x8981;&#x6761;&#x4EF6;.
 <ol>
-<li>&#x4E2A;&#x4EBA;: &#x5176;&#x7ECF;&#x6D4E;&#x529B;&#x91CF;&#x5F71;&#x54CD;&#x7740;&#x8BB8;&#x591A;&#x6743;&#x5229;&#x7684;&#x4FDD;&#x969C;&#x6C34;&#x5E73;&#x6216;&#x5B9E;&#x73B0;&#x7A0B;&#x5EA6;.</li>
-<li>&#x56FD;&#x5BB6; : &#x793E;&#x4F1A;&#x7ECF;&#x6D4E;&#x53D1;&#x5C55;&#x6C34;&#x5E73;&#x76F4;&#x63A5;&#x5F71;&#x54CD;&#x7740;&#x56FD;&#x5BB6;&#x4FDD;&#x969C;&#x4EBA;&#x6743;&#x7684;&#x80FD;&#x529B;.</li>
+<li>&#x4E2A;&#x4EBA;: &#x5176;&#x7ECF;&#x6D4E;&#x529B;&#x91CF;&#x5F71;&#x54CD;&#x7740;&#x8BB8;&#x591A;&#x6743;&#x5229;&#x7684;&#x4FDD;&#x969C;&#x6C34;&#x5E73;&#x6216;&#x5B9E;&#x73B0;&#x7A0B;&#x5EA6;.
+<blockquote>
+<p>&#x4EBA;&#x6743;&#x4FDD;&#x969C;&#x4E3B;&#x8981;&#x662F;&#x4F9D;&#x9760;&#x6743;&#x5229;&#x4EBA;&#x81EA;&#x5DF1;.</p>
+</blockquote>
+</li>
+<li>&#x56FD;&#x5BB6;: &#x793E;&#x4F1A;&#x7ECF;&#x6D4E;&#x53D1;&#x5C55;&#x6C34;&#x5E73;&#x76F4;&#x63A5;&#x5F71;&#x54CD;&#x7740;&#x56FD;&#x5BB6;&#x4FDD;&#x969C;&#x4EBA;&#x6743;&#x7684;&#x80FD;&#x529B;.
+<blockquote>
+<p>&#x7ECF;&#x6D4E;&#x53D1;&#x5C55;&#x4E0E;&#x4EBA;&#x6743;&#x4FDD;&#x969C;&#x662F;&#x76F8;&#x4E92;&#x4FC3;&#x8FDB;&#x7684;, &#x5982;&#x679C;&#x53EF;&#x4EE5;&#x5207;&#x5B9E;&#x4FDD;&#x969C;&#x6BCF;&#x4E00;&#x4E2A;&#x4EBA;&#x7684;&#x8D22;&#x4EA7;&#x6743;, &#x4E2A;&#x4EBA;&#x53BB;&#x521B;&#x9020;&#x8D22;&#x5BCC;&#x7684;&#x79EF;&#x6781;&#x6027;&#x5C31;&#x4F1A;&#x63D0;&#x9AD8;, &#x4ECE;&#x800C;&#x4FC3;&#x8FDB;&#x7ECF;&#x6D4E;&#x53D1;&#x5C55;; &#x540C;&#x6837;&#x7684;, &#x5982;&#x679C;&#x7ECF;&#x6D4E;&#x53D1;&#x5C55;, &#x4EBA;&#x4EEC;&#x7684;&#x751F;&#x6D3B;&#x6C34;&#x5E73;&#x63D0;&#x9AD8;, &#x4EBA;&#x4EEC;&#x7684;&#x4EBA;&#x6743;&#x610F;&#x8BC6;&#x4E5F;&#x4F1A;&#x63D0;&#x9AD8;, &#x4ECE;&#x800C;&#x4FC3;&#x8FDB;&#x4EBA;&#x6743;&#x4FDD;&#x969C;.</p>
+<p>&#x6839;&#x672C;&#x4E0A;&#x6765;&#x8BF4;, &#x4EBA;&#x6743;&#x4FDD;&#x969C;&#x662F;&#x7ECF;&#x6D4E;&#x53D1;&#x5C55;&#x7684;&#x6700;&#x7EC8;&#x76EE;&#x7684;.</p>
+</blockquote>
+</li>
 </ol>
 </li>
 <li>&#x5C31;&#x4EBA;&#x6743;&#x4FDD;&#x969C;&#x7684;&#x65B9;&#x5F0F;&#x800C;&#x8A00;, &#x53D1;&#x5C55;&#x7ECF;&#x6D4E;&#x662F;&#x4EBA;&#x6743;&#x4FDD;&#x969C;&#x7684;&#x91CD;&#x8981;&#x65B9;&#x5F0F;.</li>
@@ -417,29 +438,82 @@ html {
 <h2 class="mume-header" id="%E4%BA%BA%E6%9D%83%E7%9A%84%E6%B0%91%E4%B8%BB%E4%BF%9D%E9%9A%9C">&#x4EBA;&#x6743;&#x7684;&#x6C11;&#x4E3B;&#x4FDD;&#x969C;</h2>
 
 <p>&#x6C11;&#x4E3B;&#x53EF;&#x4EE5;&#x5728;&#x591A;&#x4E2A;&#x5C42;&#x9762;&#x4E0A;&#x6765;&#x7406;&#x89E3;. &#x5B83;&#x4E0D;&#x4EC5;&#x662F;&#x4E00;&#x7CFB;&#x5217;&#x6743;&#x5229;, &#x800C;&#x4E14;&#x662F;&#x4E00;&#x79CD;&#x653F;&#x6CBB;&#x4F53;&#x5236;.</p>
+<blockquote>
+<p><strong>&#x6C11;&#x4E3B;</strong>, &#x662F;&#x4E00;&#x5957;&#x4E0E;&#x653F;&#x6CBB;&#x751F;&#x6D3B;&#x6709;&#x5173;&#x7684;&#x4E00;&#x7CFB;&#x5217;&#x6743;&#x5229;, &#x5305;&#x62EC;&#x9009;&#x4E3E;&#x6743;&#x3001;&#x88AB;&#x9009;&#x4E3E;&#x6743;&#x3001;&#x8A00;&#x8BBA;&#x81EA;&#x7531;&#x3001;&#x7ED3;&#x793E;&#x81EA;&#x7531;&#x3001;&#x96C6;&#x4F1A;&#x81EA;&#x7531;&#x3001;&#x6E38;&#x884C;&#x793A;&#x5A01;&#x81EA;&#x7531;&#x3001;&#x7F62;&#x5DE5;&#x81EA;&#x7531;&#x3001;&#x77E5;&#x60C5;&#x6743;&#x3001;&#x53C2;&#x653F;&#x6743;&#x7B49;. &#x662F;&#x5EFA;&#x7ACB;&#x5728;&#x4EBA;&#x6C11;&#x7684;&#x540C;&#x610F;&#x548C;&#x6EE1;&#x610F;&#x7684;&#x524D;&#x63D0;&#x4E0B;&#x7684;.</p>
+</blockquote>
 <ol>
-<li>&#x5C31;&#x4EBA;&#x6743;&#x4FDD;&#x969C;&#x7684;&#x6761;&#x4EF6;&#x6765;&#x8BF4;, &#x6C11;&#x4E3B;&#x662F;&#x4EBA;&#x6743;&#x4FDD;&#x969C;&#x7684;&#x91CD;&#x8981;&#x6761;&#x4EF6;.</li>
-<li>&#x5C31;&#x4EBA;&#x6743;&#x4FDD;&#x969C;&#x7684;&#x65B9;&#x5F0F;&#x6765;&#x8BF4;, &#x5B9E;&#x884C;&#x6C11;&#x4E3B;, &#x6709;&#x5E8F;&#x63A8;&#x8FDB;&#x843D;&#x5B9E;&#x4EBA;&#x4EEC;&#x5E7F;&#x6CDB;&#x7684;&#x6C11;&#x4E3B;&#x6743;&#x5229;, &#x6709;&#x5229;&#x4E8E;&#x4FDD;&#x969C;&#x4EBA;&#x6743;.</li>
+<li>&#x5C31;&#x4EBA;&#x6743;&#x4FDD;&#x969C;&#x7684;&#x6761;&#x4EF6;&#x6765;&#x8BF4;, &#x6C11;&#x4E3B;&#x662F;&#x4EBA;&#x6743;&#x4FDD;&#x969C;&#x7684;&#x91CD;&#x8981;&#x6761;&#x4EF6;.
+<blockquote>
+<p>&#x5F53;&#x7136;&#x518D;&#x4E0D;&#x6C11;&#x4E3B;&#x7684;&#x56FD;&#x5BB6;&#x4E5F;&#x5B58;&#x5728;&#x4EBA;&#x6743;&#x4FDD;&#x969C;&#x8F83;&#x597D;&#x7684;&#x60C5;&#x51B5;, &#x4F46;&#x662F;&#x8FD9;&#x6837;&#x7684;&#x60C5;&#x51B5;&#x662F;&#x5C11;&#x6570;&#x7684;, &#x662F;&#x7279;&#x4F8B;&#x7684;, &#x662F;&#x4E0D;&#x957F;&#x4E45;&#x7684;.</p>
+</blockquote>
+</li>
+<li>&#x5C31;&#x4EBA;&#x6743;&#x4FDD;&#x969C;&#x7684;&#x65B9;&#x5F0F;&#x6765;&#x8BF4;, &#x5B9E;&#x884C;&#x6C11;&#x4E3B;, &#x6709;&#x5E8F;&#x63A8;&#x8FDB;&#x843D;&#x5B9E;&#x4EBA;&#x4EEC;&#x5E7F;&#x6CDB;&#x7684;&#x6C11;&#x4E3B;&#x6743;&#x5229;, &#x6709;&#x5229;&#x4E8E;&#x4FDD;&#x969C;&#x4EBA;&#x6743;.
+<blockquote>
+<p>&#x6C11;&#x4E3B;&#x662F;&#x4E3A;&#x4EBA;&#x6743;&#x670D;&#x52A1;&#x7684;, &#x4EBA;&#x6743;&#x662F;&#x6C11;&#x4E3B;&#x7684;&#x76EE;&#x7684;.</p>
+</blockquote>
+</li>
 </ol>
-<h2 class="mume-header" id="%E4%BA%BA%E6%9D%83%E7%9A%84%E6%B3%95%E5%BE%8B%E4%BF%9D%E9%9A%9C">&#x4EBA;&#x6743;&#x7684;&#x6CD5;&#x5F8B;&#x4FDD;&#x969C;</h2>
+<h2 class="mume-header" id="%E4%BA%BA%E6%9D%83%E7%9A%84%E6%B3%95%E5%BE%8B%E4%BF%9D%E9%9A%9C%E6%B3%95%E5%88%B6%E4%BF%9D%E9%9A%9C">&#x4EBA;&#x6743;&#x7684;&#x6CD5;&#x5F8B;&#x4FDD;&#x969C;/&#x6CD5;&#x5236;&#x4FDD;&#x969C;</h2>
 
 <ol>
 <li>&#x6CD5;&#x5F8B;&#x662F;&#x4EBA;&#x6743;&#x4FDD;&#x969C;&#x7684;&#x91CD;&#x8981;&#x6761;&#x4EF6;.
 <ol>
 <li>&#x6CD5;&#x5F8B;&#x662F;&#x4E00;&#x79CD;&#x5177;&#x6709;&#x666E;&#x904D;&#x6548;&#x529B;&#x3001;&#x8F83;&#x4E3A;&#x7A33;&#x5B9A;&#x7684;&#x6B63;&#x5F0F;&#x5236;&#x5EA6;.</li>
-<li>&#x6CD5;&#x5F8B;&#x662F;&#x4E00;&#x79CD;&#x5177;&#x6709;&#x7279;&#x6B8A;&#x5F3A;&#x5236;&#x6027;&#x548C;&#x4E13;&#x95E8;&#x5B9E;&#x65BD;&#x673A;&#x5236;&#x7684;&#x5236;&#x5EA6;.</li>
+<li>&#x6CD5;&#x5F8B;&#x662F;&#x4E00;&#x79CD;&#x5177;&#x6709;&#x7279;&#x6B8A;&#x5F3A;&#x5236;&#x6027;&#x548C;&#x4E13;&#x95E8;&#x5B9E;&#x65BD;&#x673A;&#x5236;&#x7684;&#x5236;&#x5EA6;.
+<blockquote>
+<p>&#x5373;, &#x5F53;&#x6743;&#x5229;&#x5236;&#x8BA2;&#x6210;&#x4E86;&#x6CD5;&#x5F8B;, &#x5C31;&#x6709;&#x4E86;&#x8F83;&#x4E3A;&#x7A33;&#x5B9A;&#x7684;, &#x4EE5;&#x53CA;&#x5F3A;&#x5236;&#x6027;&#x7684;&#x5B9E;&#x65BD;&#x7684;&#x4FDD;&#x969C;.</p>
+</blockquote>
+</li>
 </ol>
 </li>
 <li>&#x6CD5;&#x5F8B;&#x662F;&#x4EBA;&#x6743;&#x4FDD;&#x969C;&#x7684;&#x91CD;&#x8981;&#x65B9;&#x5F0F;. &#x65E0;&#x8BBA;&#x662F;&#x5728;&#x56FD;&#x5185;&#x5C42;&#x9762;&#x4E0A;&#x8FD8;&#x662F;&#x5728;&#x56FD;&#x9645;&#x5C42;&#x9762;&#x4E0A;, &#x90FD;&#x5E94;&#x5F53;&#x4EE5;&#x6CD5;&#x5F8B;&#x4F5C;&#x4E3A;&#x4EBA;&#x6743;&#x4FDD;&#x969C;&#x7684;&#x624B;&#x6BB5;, &#x5728;&#x6CD5;&#x5F8B;&#x4E2D;&#x627F;&#x8BA4;&#x548C;&#x89C4;&#x5B9A;&#x4EBA;&#x6743;, &#x5E76;&#x91C7;&#x53D6;&#x4E00;&#x5B9A;&#x7684;&#x6CD5;&#x5F8B;&#x673A;&#x5236;&#x53BB;&#x843D;&#x5B9E;&#x4EBA;&#x6743;.</li>
 <li>&#x6CD5;&#x6CBB;&#x4E0E;&#x4EBA;&#x6743;
 <blockquote>
+<p>&#x6CD5;&#x6CBB;&#x4E0E;&#x6CD5;&#x5F8B;&#x662F;&#x4E0D;&#x540C;&#x7684;. &#x6CD5;&#x6CBB;&#x662F;&#x4E00;&#x79CD;&#x653F;&#x6CBB;&#x7406;&#x5FF5;, &#x6CD5;&#x5F8B;&#x662F;&#x4E00;&#x79CD;&#x5177;&#x4F53;&#x7684;&#x5236;&#x5EA6;.</p>
 <p>&#x6CD5;&#x6CBB;&#x7684;&#x6838;&#x5FC3;&#x5185;&#x6DB5;&#x662F;&#x6307;&#x56FD;&#x5BB6;&#x4F9D;&#x7167;&#x65E2;&#x5B9A;&#x7684;&#x3001;&#x516C;&#x5F00;&#x7684;&#x666E;&#x904D;&#x6027;&#x6CD5;&#x5F8B;&#x884C;&#x4F7F;&#x6743;&#x529B;&#x4E0E;&#x7BA1;&#x7406;&#x516C;&#x5171;&#x4E8B;&#x52A1;, &#x56FD;&#x5BB6;&#x6743;&#x529B;&#x53D7;&#x5230;&#x6CD5;&#x5F8B;&#x5236;&#x7EA6;, &#x516C;&#x6C11;&#x7684;&#x81EA;&#x7531;&#x548C;&#x6743;&#x5229;&#x53D7;&#x5230;&#x6CD5;&#x5F8B;&#x7684;&#x4FDD;&#x969C;.</p>
 <p>&#x6CD5;&#x6CBB;&#x610F;&#x5473;&#x7740;,</p>
 <ol>
-<li>&#x5BF9;&#x56FD;&#x5BB6;&#x673A;&#x5173;&#x800C;&#x8A00;, &#x6CD5;&#x5F8B;&#x672A;&#x6388;&#x4E88;&#x7684;&#x5C31;&#x662F;&#x7981;&#x6B62;&#x7684;, &#x56FD;&#x5BB6;&#x673A;&#x5173;&#x4E0D;&#x80FD;&#x884C;&#x4F7F;&#x6CA1;&#x6709;&#x6CD5;&#x5F8B;&#x6839;&#x636E;&#x6216;&#x8005;&#x4E0D;&#x53D7;&#x6CD5;&#x5F8B;&#x5236;&#x7EA6;&#x7684;&#x6743;&#x529B;&#xFF08;&#x6CD5;&#x65E0;&#x6388;&#x6743;&#x4E0D;&#x53EF;&#x4E3A;&#xFF09;&#xFF1B;</li>
-<li>&#x5BF9;&#x516C;&#x6C11;&#x800C;&#x8A00;, &#x6CD5;&#x5F8B;&#x672A;&#x7981;&#x6B62;&#x7684;&#x5C31;&#x662F;&#x5141;&#x8BB8;&#x7684;, &#x516C;&#x6C11;&#x5C31;&#x81EA;&#x5DF1;&#x7684;&#x884C;&#x4E3A;&#x63A5;&#x53D7;&#x793E;&#x4F1A;&#x7684;&#x9053;&#x5FB7;&#x8BC4;&#x4EF7;, &#x4F46;&#x662F;&#x4E0D;&#x63A5;&#x53D7;&#x56FD;&#x5BB6;&#x673A;&#x5173;&#x7684;&#x5F3A;&#x5236;&#x6027;&#x60E9;&#x7F5A;&#xFF08;&#x6CD5;&#x65E0;&#x7981;&#x6B62;&#x5373;&#x81EA;&#x7531;&#xFF09;.</li>
+<li>&#x5BF9;&#x56FD;&#x5BB6;&#x673A;&#x5173;&#x800C;&#x8A00;, &#x6CD5;&#x5F8B;&#x672A;&#x6388;&#x4E88;&#x7684;&#x5C31;&#x662F;&#x7981;&#x6B62;&#x7684;, &#x56FD;&#x5BB6;&#x673A;&#x5173;&#x4E0D;&#x80FD;&#x884C;&#x4F7F;&#x6CA1;&#x6709;&#x6CD5;&#x5F8B;&#x6839;&#x636E;&#x6216;&#x8005;&#x4E0D;&#x53D7;&#x6CD5;&#x5F8B;&#x5236;&#x7EA6;&#x7684;&#x6743;&#x529B; <strong>(&#x6CD5;&#x65E0;&#x6388;&#x6743;&#x4E0D;&#x53EF;&#x4E3A;)</strong>;</li>
+<li>&#x5BF9;&#x516C;&#x6C11;&#x800C;&#x8A00;, &#x6CD5;&#x5F8B;&#x672A;&#x7981;&#x6B62;&#x7684;&#x5C31;&#x662F;&#x5141;&#x8BB8;&#x7684;, &#x516C;&#x6C11;&#x5C31;&#x81EA;&#x5DF1;&#x7684;&#x884C;&#x4E3A;&#x63A5;&#x53D7;&#x793E;&#x4F1A;&#x7684;&#x9053;&#x5FB7;&#x8BC4;&#x4EF7;, &#x4F46;&#x662F;&#x4E0D;&#x63A5;&#x53D7;&#x56FD;&#x5BB6;&#x673A;&#x5173;&#x7684;&#x5F3A;&#x5236;&#x6027;&#x60E9;&#x7F5A; <strong>(&#x6CD5;&#x65E0;&#x7981;&#x6B62;&#x5373;&#x81EA;&#x7531;)</strong>.</li>
 </ol>
 </blockquote>
+</li>
+</ol>
+<p>&#x6CD5;&#x6CBB;&#x7684;&#x601D;&#x60F3;&#x662F;&#x5177;&#x6709;&#x9769;&#x547D;&#x6027;&#x7684;, &#x518D;&#x8FC7;&#x53BB;&#x662F;: &#x5C06;&#x4EBA;&#x6C11;&#x5173;&#x5728;&#x7B3C;&#x5B50;&#x5185;, &#x800C;&#x7EDF;&#x6CBB;&#x8005;&#x5728;&#x7B3C;&#x5B50;&#x5916;, &#x4F46;&#x662F;&#x73B0;&#x5728;&#x662F;: &#x5C06;&#x7EDF;&#x6CBB;&#x8005;, &#x56FD;&#x5BB6;&#x5173;&#x5728;&#x7B3C;&#x5B50;&#x5185;, &#x800C;&#x4EBA;&#x6C11;&#x5728;&#x7B3C;&#x5B50;&#x5916;.</p>
+<h3 class="mume-header" id="%E6%B3%95%E5%88%B6%E7%9A%84%E5%8E%9F%E5%88%99">&#x6CD5;&#x5236;&#x7684;&#x539F;&#x5219;:</h3>
+
+<ol>
+<li><strong>&#x5B9E;&#x8D28;&#x6027;&#x539F;&#x5219;</strong>: &#x6CD5;&#x6CBB;&#x7684;&#x5B9E;&#x8D28;&#x6027;&#x539F;&#x5219;&#x662F;&#x6CD5;&#x5F8B;&#x7684;&#x5185;&#x5BB9;&#x5E94;&#x5F53;&#x7B26;&#x5408;&#x4E00;&#x4E9B;&#x4EF7;&#x503C;&#x51C6;&#x5219;, &#x6CD5;&#x5F8B;&#x5E94;&#x5F53;&#x6210;&#x4E3A;&quot;&#x826F;&#x6CD5;&quot;.</li>
+<li><strong>&#x5F62;&#x5F0F;&#x6027;&#x539F;&#x5219;</strong>: &#x6CD5;&#x6CBB;&#x7684;&#x5F62;&#x5F0F;&#x6027;&#x539F;&#x5219;&#x4E3B;&#x8981;&#x6307;&#x4E3A;&#x5B9E;&#x884C;&#x6CD5;&#x6CBB;&#x6240;&#x5FC5;&#x9700;&#x7684;&#x6CD5;&#x5F8B;&#x5236;&#x5EA6;&#x53CA;&#x5176;&#x8FD0;&#x884C;&#x7684;&#x7A0B;&#x5E8F;&#x8981;&#x4EF6;.
+<ul>
+<li><strong>&#x4E00;&#x822C;&#x6027;</strong>: &#x6CD5;&#x5F8B;&#x5177;&#x6709;&#x4E00;&#x822C;&#x6027;, &#x9002;&#x7528;&#x4E8E;&#x4E0D;&#x7279;&#x5B9A;&#x7684;&#x5BF9;&#x8C61;;
+<blockquote>
+<p>&#x4F46;&#x662F;&#x5177;&#x6709;&#x9488;&#x5BF9;&#x7279;&#x5B9A;&#x7684;&#x4EBA;&#x7FA4;, &#x7FA4;&#x4F53;, &#x4F46;&#x662F;&#x5B83;&#x4EEC;&#x518D;&#x5BF9;&#x4E8E;&#x8FD9;&#x4E2A;&#x7FA4;&#x4F53;&#x4F9D;&#x65E7;&#x662F;&#x4E00;&#x822C;&#x6027;&#x7684;.</p>
+<p>i.e: &#x5987;&#x5973;&#x6743;&#x76CA;&#x4FDD;&#x969C;&#x6CD5;, &#x8001;&#x5E74;&#x4EBA;&#x6743;&#x76CA;&#x4FDD;&#x969C;&#x6CD5;&#x7B49;.</p>
+</blockquote>
+</li>
+<li><strong>&#x516C;&#x5F00;&#x6027;</strong>: &#x6CD5;&#x5F8B;&#x5E94;&#x5F53;&#x516C;&#x5E03;, &#x6653;&#x4E4B;&#x4E8E;&#x6C11;&#x4F17;;</li>
+<li><strong>&#x53EF;&#x80FD;&#x6027;</strong>: &#x6CD5;&#x5F8B;&#x8981;&#x6C42;&#x4EBA;&#x4EEC;&#x505A;&#x7684;&#x4E8B;&#x60C5;&#x5FC5;&#x987B;&#x662F;&#x4EBA;&#x4EEC;&#x53EF;&#x80FD;&#x505A;&#x5230;&#x7684;&#x4E8B;&#x60C5;;</li>
+<li><strong>&#x660E;&#x786E;&#x6027;</strong>: &#x6CD5;&#x5F8B;&#x5FC5;&#x987B;&#x660E;&#x786E;, &#x5C3D;&#x53EF;&#x80FD;&#x907F;&#x514D;&#x542B;&#x6DF7;&#x4E0D;&#x6E05;;
+<blockquote>
+<p>&#x6CD5;&#x5F8B;&#x65E0;&#x6CD5;&#x505A;&#x5230;&#x5B8C;&#x5168;&#x7684;&#x660E;&#x786E;, &#x4F46;&#x662F;&#x7ACB;&#x6CD5;&#x8005;&#x9700;&#x8981;&#x5C3D;&#x53EF;&#x80FD;&#x7684;&#x660E;&#x786E;, &#x4E0D;&#x80FD;&#x6545;&#x610F;&#x542B;&#x6DF7;&#x4E0D;&#x6E05;.</p>
+</blockquote>
+</li>
+<li><strong>&#x7A33;&#x5B9A;&#x6027;</strong>: &#x6CD5;&#x5F8B;&#x5E94;&#x5F53;&#x5177;&#x6709;&#x4E00;&#x5B9A;&#x7684;&#x7A33;&#x5B9A;&#x6027;, &#x4E0D;&#x80FD;&#x53D8;&#x52A8;&#x8FC7;&#x4E8E;&#x9891;&#x7E41;;</li>
+<li><strong>&#x5185;&#x5728;&#x548C;&#x8C10;</strong>: &#x6CD5;&#x5F8B;&#x5E94;&#x5F53;&#x5C3D;&#x91CF;&#x51CF;&#x5C11;&#x5185;&#x5728;&#x77DB;&#x76FE;&#x6216;&#x51B2;&#x7A81;;
+<blockquote>
+<p>&#x540C;&#x6837;&#x7684;, &#x6CD5;&#x5F8B;&#x4E5F;&#x65E0;&#x6CD5;&#x505A;&#x5230;&#x5B8C;&#x5168;&#x7684;&#x5185;&#x5728;&#x548C;&#x8C10;, &#x4F46;&#x662F;&#x7ACB;&#x6CD5;&#x8005;&#x9700;&#x8981;&#x5C3D;&#x53EF;&#x80FD;&#x7684;&#x51CF;&#x5C11;&#x5185;&#x5728;&#x77DB;&#x76FE;&#x6216;&#x51B2;&#x7A81;.</p>
+</blockquote>
+</li>
+<li><strong>&#x4E0D;&#x6EAF;&#x65E2;&#x5F80;</strong>: &#x6CD5;&#x5F8B;&#x4E00;&#x822C;&#x4E0D;&#x5E94;&#x9002;&#x7528;&#x4E8E;&#x751F;&#x6548;&#x524D;&#x7684;&#x4E8B;&#x4EF6;&#x548C;&#x884C;&#x4E3A;;
+<blockquote>
+<p>&#x7279;&#x5B9A;&#x60C5;&#x51B5;&#x4E0B;, &#x6CD5;&#x5F8B;&#x53EF;&#x4EE5;&#x6EAF;&#x5F80;,</p>
+<p>i.e. &quot;&#x4ECE;&#x65E7;&#x517C;&#x4ECE;&#x8F7B;&quot;: &#x5982;&#x679C;&#x67D0;&#x4E2A;&#x65B0;&#x7684;&#x6CD5;&#x5F8B;&#x662F;&#x76F8;&#x5F53;&#x4E8E;&#x65E7;&#x6CD5;&#x5BF9;&#x4E8E;&#x67D0;&#x4E2A;&#x884C;&#x4E3A;&#x662F;&#x8F7B;&#x5224;&#x7684;, &#x90A3;&#x4E48;&#x8FD9;&#x4E2A;&#x65B0;&#x6CD5;&#x5F8B;&#x53EF;&#x4EE5;&#x6EAF;&#x5F80;, &#x800C;&#x4E0D;&#x5E94;&#x8BE5;&#x4F9D;&#x636E;&#x65E7;&#x6CD5;&#x6765;&#x5224;&#x51B3;.</p>
+</blockquote>
+</li>
+<li><strong>&#x4F9D;&#x6CD5;&#x9610;&#x91CA;</strong>: &#x56FD;&#x5BB6;&#x673A;&#x5173;&#x5728;&#x5B9E;&#x65BD;&#x6CD5;&#x5F8B;&#x7684;&#x8FC7;&#x7A0B;&#x4E2D;&#x5FC5;&#x987B;&#x6839;&#x636E;&#x6CD5;&#x5F8B;&#x7684;&#x539F;&#x5219;&#x548C;&#x7CBE;&#x795E;&#x9610;&#x91CA;&#x6CD5;&#x5F8B;;</li>
+<li><strong>&#x6709;&#x6CD5;&#x5FC5;&#x4F9D;</strong>: &#x56FD;&#x5BB6;&#x673A;&#x5173;&#x7684;&#x884C;&#x4E3A;&#x5FC5;&#x987B;&#x4E0E;&#x6CD5;&#x5F8B;&#x89C4;&#x5B9A;&#x76F8;&#x4E00;&#x81F4;.</li>
+</ul>
 </li>
 </ol>
 
